# tetris_generic

./: .gitignore  README.md  TODO  flake.nix  pyproject.toml
src/tetris_generic/: __init__.py  cell.py  control_type.py  space.py  tetris_game.py
src/tetris_generic/default_impl/: __init__.py  colour_cell.py  const.py  default_space.py  default_tetromino_spawner.py  tetrominos.py
src/tetris_generic/event/: __init__.py  events.py  listener.py
src/tetris_generic/runners/: __init__.py
src/tetris_generic/runners/terminal_runner/: __init__.py  formatted_text_surface.py  key_map.py  terminal_runner.py
src/tetris_generic/tetromino/: __init__.py  tetromino.py  tetromino_spawner.py
