[project]
name = "tetris-generic"
version = "v0.1.1"
description = "Simple tetris game"
readme = "README.md"
authors = [
    { name = "ityeri", email = "ityeri9@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
tgt = "tetris_generic.runners.terminal_runner:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"